# SDL2-framework

./: CMakeLists.txt  Makefile  README.md
include/: Character.h  Game.h  SaveFile.h  Sprite.h  Window.h  collision.hpp
lib/: Animation.cpp  Background.cpp  Camera.cpp  Game.cpp  Parallax.cpp  Savefile.cpp  Sprite.cpp  Window.cpp  utility.cpp
src/: .Window.cpp.swp  .Window.h.swp  Animation.cpp  Animation.h  Background.cpp  Background.h  Camera.h  Game.cpp  Game.h  Input.cpp  Input.h  Main.cpp  Parallax.cpp  Parallax.h  Physics.h  Player.cpp  Player.h  Sprite.cpp  Sprite.h  Test.cpp  Window.cpp  Window.h  main.cpp  test.cpp  utility.cpp  utility.hpp
